fill in about and add seattle to doha post

--- a/_posts/2022-09-19-intro.md
+++ b/_posts/2022-09-19-intro.md
@@ -5,6 +5,7 @@ description: "It'll be fineeee"
 date: 2022-09-19
 feature_image: images/hannes_and_ganesh_gg.jpg
 tags: [nepal]
+author: hannes
 ---
 
 Soooo Ganesh and I fly to Kathmandu tomorrow and I still haven't started packing yet. That's because last night I decided I wanted to create this website - a place where I can collect photos and stories to help my pre-alzheimer's brain remember as much as possible about the comings and goings of the current millenium's early 20's! So future descendants, if you are reading this to me between feeding me spoonfuls of apple sauce in my memory care unit - shout out y'all. Or if you are one of people in my life who care enough about me to be reading this in 2022, wowwwww get a life!! lol jk just kidding thanks for being here. Anywayyyyyy this website/blog/gallery thingy is mostly for me and will serve as a place where I post stories and photos from my upcoming travels and, possibly, beyond!
